--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             var result = monthlyExpense * 1200 / (60 - startingAge);
 
             // 显示计算结果
-            document.getElementById('result').innerHTML = '如果按照现在这个生活费水平活到100岁，你需要每年赚' + result.toFixed(0) + '，才能覆盖你的一生所需。';
+            document.getElementById('result').innerHTML = '如果按照现在这个生活费水平活到100岁，你需要每年赚' + result.toFixed(0) + '，才能覆盖你从0岁到100岁的一生所需。';
         }
     </script>
 </body>
