--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     			
     			// 显示计算结果
     			document.getElementById('result').innerHTML = '如果按照现在这个生活费水平活到100岁，你总共需要花费' + totalExpense.toFixed(0) + '。
-				你今年年薪至少要为' + initialSalary.toFixed(0) '，才能在退休前赚够这么多钱。';
+				你今年年薪至少要为' + initialSalary.toFixed(0) + '，才能在退休前赚够这么多钱。';
 		}
 
 		 </script>
