--- a/index.html
+++ b/index.html
@@ -88,5 +88,7 @@
 	<!-- 添加的文字段落 -->
     <p class="additional-text">假设通货膨胀为3%每年，你工资每年上涨2%。</p>
 
+	 <p class="additional-text">zonghuafei + totalExpense.toFixed(0)</p>
+
 </body>
 </html>
