--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@ for (var i = 0; i < Math.min(5, cohort1.data.length); i++) {
 }
                     // 查找具有特定基因名的那一行
                     var selectedRow = cohort1.data.find(function(row) {
-                        return row.GeneName === geneNameInput;
+                        return row.geneName === geneNameInput;
                     });
 			// Log information about the selected row for debugging
 console.log('Selected Row:', selectedRow);		
