--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gene Expression Box Plot</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chartjs-chart-box-and-violin-plot"></script>
+    <!-- Update Chart.js to the latest version -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<!-- Update the box and violin plot plugin to the latest version -->
+<script src="https://cdn.jsdelivr.net/npm/chartjs-chart-box-and-violin-plot"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
