--- a/index2.html
+++ b/index2.html
@@ -91,7 +91,7 @@ console.log();
 
                         // 创建新的箱线图
                         myChart = new Chart(ctx, {
-                            type: 'boxplot',
+                            type: 'bar',
                             data: plotData,
                             options: {
                                 scales: {
