--- a/index2.html
+++ b/index2.html
@@ -59,24 +59,32 @@
                                 type: 'box',
                                 y: valuesGroup1,
                                 jitter: 0.3,
+                                pointpos: -1.8,
+                                boxpoints: 'all',
                                 name: 'Resistance'
                             },
                             {
                                 type: 'box',
                                 y: valuesGroup2,
                                 jitter: 0.3,
+                                pointpos: -1.8,
+                                boxpoints: 'all',
                                 name: 'Resilience'
                             },
                             {
                                 type: 'box',
                                 y: valuesGroup3,
                                 jitter: 0.3,
+                                pointpos: -1.8,
+                                boxpoints: 'all',
                                 name: 'Susceptible'
                             },
                             {
                                 type: 'box',
+                                boxpoints: 'all',
                                 y: valuesGroup4,
                                 jitter: 0.3,
+                                pointpos: -1.8,
                                 name: 'Early_death'
                             }
                         ];
