--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,10 @@
 
                     // 检查是否找到了匹配的行
                     if (!selectedRow) {
-                        var expressionChart = null;
+                        var chartCanvas = document.getElementById('expressionChart');
+                        if (chartCanvas) {
+                            chartCanvas.parentNode.removeChild(chartCanvas);
+                        }
                         document.getElementById('errorMessage').innerText = "Sorry, can't find this gene. Please ensure your input is the right pig ensembl name or gene name, e.g., ENSSSCG00000000002 or IL6";
                         console.log("Sorry, can't find this gene. Please ensure your input is the right pig ensembl name, e.g., ENSSSCG00000000131.");
                     } else {
