--- a/index2.html
+++ b/index2.html
@@ -58,7 +58,7 @@
                         if (chartCanvas) {
                             chartCanvas.parentNode.removeChild(chartCanvas);
                         }
-                        document.getElementById('errorMessage').innerText = "Sorry, can't find this gene. Please ensure your input is the right pig ensembl name or gene name, e.g., ENSSSCG00000000002 or IL6";
+                        document.getElementById('errorMessage').innerText = "Sorry, can't find this gene. Please ensure your input is the right pig ensembl name or gene name, e.g., ENSSSCG00000000002 or IL6\nOr try refresh this page.";
                         console.log("Sorry, can't find this gene. Please ensure your input is the right pig ensembl name, e.g., ENSSSCG00000000131.");
                     } else {
                         
