--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
     </div>
     <div id="page2" class="page">
         <h2>Cohort 2</h2>
-		<label for="geneInput">Enter Gene Name:</label>
+		<label for="geneInput2">Enter Gene Name:</label>
 		<input type="text" id="geneInput2">
 		<button onclick="plotExpression2()">Plot Expression</button>
 		<div id="expressionChart1" style="width: 800px; height: 400px;"></div>
