--- a/index2.html
+++ b/index2.html
@@ -135,7 +135,7 @@
         }
 		function plotExpression2() {
             // 获取基因名输入框的值
-            var geneNameInput = document.getElementById('geneInput2').value;
+            var geneNameInput2 = document.getElementById('geneInput2').value;
 
             Papa.parse('cohort2FPKM.csv', {
                 download: true,
