--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Gene Expression Box Plot</h1>
     <p>Try refresh page if results can't show appropriately.</p>
+	<p style="color: blue;">You can selectively display the desired group by clicking on the name in the legend.</p>
+
     
     <div id="page1" class="page active">
         <h2>Cohort 1</h2>
@@ -24,7 +26,7 @@
 		<label for="geneInput2">Enter Gene Name:</label>
 		<input type="text" id="geneInput2">
 		<button onclick="plotExpression2()">Plot Expression</button>
-		<div id="expressionChart4" style="width: 800px; height: 400px;"></div>
+		<div id="expressionChart4" style="width: 800px; height: 800px;"></div>
 		<div id="expressionChart1" style="width: 800px; height: 400px;"></div>
 		<div id="expressionChart2" style="width: 800px; height: 400px;"></div>
 		<div id="expressionChart3" style="width: 800px; height: 400px;"></div>
